auth/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oauth2-proxy
spec:
  selector:
    app: oauth2-proxy
  ports:
    - port: 80
      targetPort: 4180
